--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,10 @@
     --teal: #20c997;
     --cyan: #17a2b8;
     --white: #fff;
-    --gray: #868e96;
+    --gray: #8e8e8e;;
     --gray-dark: #343a40;
-    --primary: #d50000;
+    /* --primary: #d50000; */
+    --primary: #9b0000;
     --secondary: #868e96;
     --success: #28a745;
     --info: #17a2b8;
@@ -37,7 +38,8 @@
     --darkText: #60666d;;
     --greyText: hs1(0, 0%, 29%);
     --lightGreyText: hs1(0, 0%, 45%);
-    --backgroundColor: #fbfbfb;
+    --backgroundColor: #f1f3f4;
+    --borderColor: #dadce0;
 }
 /* 1.2 - RESET */
 *{
@@ -56,6 +58,13 @@ body {
     text-align: left;
     background-color: var(--backgroundColor);
 }
+a{
+    color: var(--primary);
+    opacity: 0.8;
+}
+a:hover{
+    opacity: 1;
+}
 /* 1.4 - GENERAL CLASSES */
 .display-block{
     display: block;
@@ -65,6 +74,30 @@ body {
 }
 .display-none{
     display: none;
+}
+.form-group {
+    margin-bottom: 1rem;
+}
+.form-label {
+    display: block;
+    margin-bottom: .375rem;
+    font-weight: 600;
+    font-size: 0.875rem;
+}
+.form-control, input {
+    display: block;
+    width: 100%;
+    height: 2.375rem;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.9375rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 40, 100, 0.12);
+    border-radius: 3px;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 /* 1.4.1 - SELECT */
 .select-transparent{
@@ -109,6 +142,7 @@ body {
     text-align: justify;
     font-weight: 500;
     padding: 5px;
+    color: var(--darkText);
 }
 .dropdown-item:hover ul li span {
     float: right;
@@ -124,4 +158,49 @@ body {
 }
 .dropdown-item:hover ul li:hover span {
     background-color: #ee204e;
+}
+/* 1.4.3 - DIVIDERS*/
+.dividerVertical{
+    background-color: var(--white);
+    width: 1px;
+    height: 20px;
+    z-index: 99;
+}
+.dividerHorizontal{
+    background-color: var(--white);
+    width: 20px;
+    height: 1px;
+    z-index: 99;
+}
+/* 1.4.4 - BUTTONS */
+.btn{
+    font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+    padding: 5px 15px;
+    cursor: pointer;
+    font-weight: 500;
+    -webkit-transition: all 0.5s; /* Safari prior 6.1 */
+    transition: all 0.5s;
+}
+.btnPrimary{
+    background-color: var(--primary);
+    border-style: solid;
+    border-color: var(--primary);
+    opacity: 0.8;
+    color: var(--white);
+}
+.btnPrimary:hover{
+    opacity: 1;
+}
+.btn-outline{
+    background: transparent;
+    border-color: var(--white);
+    color: var(--white);
+    border-radius: 5px;
+    border-style: solid;
+}
+.btn-outline:hover{
+    background: var(--white);
+    border-color: var(--white);
+    color: var(--primary);
+    font-weight: 500;
 }
