--- a/src/Components/Layout/Navbar/Components/SelectLanguage/style.css
+++ b/src/Components/Layout/Navbar/Components/SelectLanguage/style.css
@@ -3,14 +3,15 @@
     display: flex;
     align-items: center;
     width: 100px;
+    cursor: pointer;
 }
 .select img{
-    height: 10px;
+    height: 15px;
     width: auto;
     margin: 0px 10px 0px 15px;
 }
 .select i{
-    margin: 5px 0px 0px 5px;
+    margin: 0px 0px 0px 5px;
     font-size: 8pt;
     -webkit-transition: all 0.5s; /* Safari prior 6.1 */
     transition: all 0.5s;
@@ -26,11 +27,12 @@
 }
 .select .box-select .box-select-ul{
     list-style: none;
+    padding: 5px;
 }
 .select .box-select .box-select-li {
     display: inline-block;
     width: 90px;
-    margin: 0px 0px 0px 10px;
+    margin: 0px;
     text-align: justify;
     color: var(--darkText);
     cursor: pointer;
