--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ a:hover{
     font-weight: 600;
     font-size: 0.875rem;
 }
-.form-control, input {
+.form-control, .input-text {
     display: block;
     width: 100%;
     height: 2.375rem;
@@ -99,7 +99,7 @@ a:hover{
     border-radius: 3px;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-input.is-invalid {
+.input-text .is-invalid {
     border-color: #cd201f;
     padding-right: calc(1.6em + 0.75rem);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23cd201f' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23cd201f' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E");
