--- a/src/Sections/Dashboards/BeneficiaryDashboard/Pages/MeuCadastro/Tabs/Relacionamentos/style.css
+++ b/src/Sections/Dashboards/BeneficiaryDashboard/Pages/MeuCadastro/Tabs/Relacionamentos/style.css
@@ -1,28 +1,137 @@
 .dashboardBeneficiaryMeuCadastroRelacionamento{
-    background-color: red;
     width: 100%;
     margin-top: 50px;
 }
 .dashboardBeneficiaryMeuCadastroRelacionamento-ul{
-    background-color: purple;
     list-style: none;
 }
 .dashboardBeneficiaryMeuCadastroRelacionamento-li{
-    background-color: green;
     display: flex;
+    padding: 10px 10px 0px 0px;
+    border-bottom: 1px solid var(--borderColor);
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-li:nth-child(1){
+    cursor: pointer;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-li:nth-child(1) p{
+    opacity: 0.8;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-li:nth-child(1):hover p{
+    opacity: 1;
 }
 .dashboardBeneficiaryMeuCadastroRelacionamento-li-imgContainer{
-    background-color: brown;
     display: flex;
     align-items: center;
     padding: 15px;
 }
 .dashboardBeneficiaryMeuCadastroRelacionamento-li-imgContainer img{
-    width: 75px;
+    width: 40px;
     margin: 0px auto;
 }
 .dashboardBeneficiaryMeuCadastroRelacionamento-li-addText{
-    background-color: blue;
     display: flex;
     align-items: center;
 }
+.dashboardBeneficiaryMeuCadastroRelacionamento-li-containerInfo p{
+    font-size: 14pt;
+    margin-top: 10px;
+    color: var(--primary);
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-li-containerInfo span{
+    font-size: 10pt;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-buttonsActions{
+    margin-left: auto;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-buttonsActions button:nth-child(1){
+    margin-right: 15px;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-buttonsActions i:nth-child(1){
+    margin-right: 5px;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-buttonsActions button,
+.dashboardBeneficiaryMeuCadastroRelacionamento-buttonsActions i{
+    opacity: 0;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-li:hover button{
+    opacity: 1;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-li:hover i{
+    opacity: 1;
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-li-addRelacionamento{
+    background-color: var(--backgroundColor);
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--borderColor);
+}
+.dashboardBeneficiaryMeuCadastroRelacionamento-li-addRelacionamento .form-group{
+    margin: 0px 10px 0px 0px;
+}
+
+
+.drawer-out {
+    float: left;
+    height: 0px;
+    width: 100%;
+    background: var(--dark);
+    overflow: hidden;
+    position: relative;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .drawer-out .drawer {
+    float: left;
+    width: 100%;
+    height: 300px;
+    background: #fff;
+    opacity: 0;
+    -webkit-transform: perspective(250px) rotateX(90deg);
+    transform: perspective(250px) rotateX(90deg);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  .drawer-out.opencan {
+    height: 70px;
+  }
+  .drawer-out.opencan .drawer {
+    opacity: 1;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform: scale(1) perspective(1000px) rotateX(0deg);
+    -webkit-animation: out 0.75s ease forwards;
+    -moz-animation: out 0.75s ease forwards;
+    animation: out 0.75s ease forwards;
+  }
+  
+  @-webkit-keyframes out {
+    0% {
+      -webkit-transform: scale(0.8) perspective(1000px) rotateX(90deg);
+      transform: scale(0.8) perspective(1000px) rotateX(90deg);
+    }
+    100% {
+      -webkit-transform: scale(1) perspective(1000px) rotateX(0deg);
+      transform: scale(1) perspective(1000px) rotateX(0deg);
+    }
+  }
+  @-moz-keyframes out {
+    0% {
+      -moz-transform: scale(0.8) perspective(1000px) rotateX(90deg);
+    }
+    100% {
+      -moz-transform: scale(1) perspective(1000px) rotateX(0deg);
+    }
+  }
+  @keyframes out {
+    0% {
+      -webkit-transform: scale(0.8) perspective(1000px) rotateX(90deg);
+      transform: scale(0.8) perspective(1000px) rotateX(90deg);
+    }
+    100% {
+      -webkit-transform: scale(1) perspective(1000px) rotateX(0deg);
+      transform: scale(1) perspective(1000px) rotateX(0deg);
+    }
+  }
