--- a/src/Components/Layout/PainelGeral/style.css
+++ b/src/Components/Layout/PainelGeral/style.css
@@ -3,10 +3,12 @@
 }
 .dashboardGeral .containerSidebar{
     box-sizing: border-box;
-    position: relative;
     height: 100vh;
     -webkit-transition: all 0.5s; /* Safari prior 6.1 */
     transition: all 0.5s;
+    position: relative;
+    z-index: 10;
+    box-shadow: 5px 0 5px 0px rgba(0,0,0,0.12);
 }
 .dashboardGeral .containerSidebarOpen{
     width: 300px;
