--- a/src/Sections/Paineis/PainelDaBeneficiaria/Pages/MeuCadastro/Tabs/Relacionamentos/style.css
+++ b/src/Sections/Paineis/PainelDaBeneficiaria/Pages/MeuCadastro/Tabs/Relacionamentos/style.css
@@ -89,7 +89,7 @@
     float: left;
     height: 0px;
     width: 100%;
-    background: var(--dark);
+    background: var(--backgroundColor);
     overflow: hidden;
     position: relative;
     -webkit-transition: all 0.3s ease-in-out;
