--- a/src/Sections/Paineis/PainelDaGestora/Pages/GestorDeBeneficios/style.css
+++ b/src/Sections/Paineis/PainelDaGestora/Pages/GestorDeBeneficios/style.css
@@ -1,5 +1,5 @@
 .painelGestoraGestaoDeBeneficios .gestoraGestorDeBeneficiosTabs {
-  border-bottom: 1px solid rgba(0,0,0,0.12);
+  
 }
 .painelGestoraGestaoDeBeneficios .gestoraGestorDeBeneficiosTabs .gestoraGestorDeBeneficiosTabs-ul{
   list-style: none;
@@ -12,10 +12,9 @@
   display: flex;
   align-items: center;
   text-align: justify;
-  width: 100px;
-  border-right: 1px solid rgba(0,0,0,0.12);
-  border-top: 1px solid rgba(0,0,0,0.12);
-  border-left: 1px solid rgba(0,0,0,0.12);
+  width: auto;
+  padding: 5px;
+  border: 1px solid var(--borderColor);
   background-color: var(--white);
 }
 .painelGestoraGestaoDeBeneficios .gestoraGestorDeBeneficiosTabs .gestoraGestorDeBeneficiosTabs-li label {
