--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,11 @@
 body {
     margin: 0;
     font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
     font-size: 0.9375rem;
     font-weight: 400;
-    line-height: 1.5;
-    color: #9aa0ac;;
+    color: #9aa0ac;
+    line-height: 1.4285em;
     text-align: left;
     background-color: var(--backgroundColor);
 }
@@ -90,7 +91,7 @@ a:hover{
 .form-control, .input-text {
     display: block;
     width: 100%;
-    height: 2.375rem;
+    height: 30px;
     padding: 0.375rem 0.75rem;
     font-size: 0.9375rem;
     font-weight: 400;
@@ -283,11 +284,11 @@ a:hover{
 .btn-3d {
     display: inline-block;
     color: var(--white);
-    font-size: 14pt;
+    font-size: 12pt;
     border-radius: 4px;
     -webkit-transition: none; /* Safari prior 6.1 */
     transition: none;
-    padding: 3px 10px;
+    padding: 0px 5px;
     border: none;
 }
 .btn-3d:active {
