--- a/src/Sections/Dashboards/ManagerDashboard/Pages/Programs/Componentes/FilterRow/style.css
+++ b/src/Sections/Dashboards/ManagerDashboard/Pages/Programs/Componentes/FilterRow/style.css
@@ -1,7 +1,7 @@
 .linhaDeFiltrosDosProgramas-containerGeral{
     background-color: var(--white);
     width: 100%;
-    height: 50px;
+    height: 40px;
     margin-bottom: 10px;
     display: flex;
     align-content: center;
@@ -28,6 +28,10 @@
 .linhaDeFiltrosDosProgramas-itensNaDireita input{
     width: 150px;
     margin: 0px 5px;
+}
+.linhaDeFiltrosDosProgramas-itensNaDireita a{
+    margin-right: 5px;
+    opacity: 1;
 }
 .linhaDeFiltrosDosProgramas-itensNaDireita button{
     margin: 0px 5px 5px 0px;
