--- a/src/Sections/Dashboards/ManagerDashboard/Pages/Program/style.css
+++ b/src/Sections/Dashboards/ManagerDashboard/Pages/Program/style.css
@@ -1,3 +1,15 @@
-.managerDashboardProgram-containerGeral{
-    
+.managerDashboardProgram-generalContainer{
+    background-color: purple;
+}
+.managerDashboardProgram-actionsGeneralContainer{
+    background-color: darkgreen;
+    display: flex;
+    height: 100px;
+    align-items: center;
+}
+.managerDashboardProgram-actionsGeneralContainer a{
+    text-transform: none;
+    text-decoration: none;
+    opacity: 1;
+    color: var(--textGray);
 }
