--- a/src/Sections/Dashboards/ManagerDashboard/Pages/Programs/Componentes/ContainerCards/style.css
+++ b/src/Sections/Dashboards/ManagerDashboard/Pages/Programs/Componentes/ContainerCards/style.css
@@ -1,4 +1,4 @@
 .managerDashboardProgramsContainerCards-containerGeral{
-    background-color: red;
+    background-color: var(--white);
     padding: 5px;
 }
