--- a/src/Sections/Dashboards/BeneficiaryDashboard/Pages/MyRegister/style.css
+++ b/src/Sections/Dashboards/BeneficiaryDashboard/Pages/MyRegister/style.css
@@ -8,6 +8,7 @@
 }
 .dashboardBeneficiaryMeuCadastro .beneficiaryMeuCadastroTabs .beneficiaryMeuCadastroTabs-li{
   margin: 0px 5px;
+  background: var(--white);
   height: 40px;
   display: flex;
   align-items: center;
@@ -26,4 +27,5 @@
 }
 .dashboardBeneficiaryMeuCadastro .beneficiaryMeuCadastroTabs .beneficiaryMeuCadastroTabs-li .active{
   border-bottom: 1px solid var(--primary);
+  color: var(--textDark);
 }
