--- a/src/Sections/Dashboards/ManagerDashboard/Pages/Program/Tabs/LinkBeneficiary/style.css
+++ b/src/Sections/Dashboards/ManagerDashboard/Pages/Program/Tabs/LinkBeneficiary/style.css
@@ -1,12 +1,12 @@
 .managerDashboardProgramsProgramLinkBeneficiary-generalContainer{
-    background-color: firebrick;
     margin: 20px auto;
 }
 .managerDashboardProgramsProgramLinkBeneficiary-generalContainer h1{
     text-align: center;
 }
 .managerDashboardProgramsProgramLinkBeneficiary-cardSearchGeneralContainer{
-    background-color: salmon;
+    background-color: var(--backgroundColor);
+    border: 1px solid var(--borderColor);
     width: 300px;
     height: 270px;
     margin: 20px auto;
@@ -17,7 +17,8 @@
     display: block;
 }
 .managerDashboardProgramsProgramLinkBeneficiary-cardFoundGeneralContainer{
-    background-color: steelblue;
+    background-color: var(--gray);
+    color: var(--white);
     width: 300px;
     height: 270px;
     margin: 20px auto;
@@ -29,14 +30,7 @@
     display: block;
 }
 .managerDashboardProgramsProgramLinkBeneficiary-cardFoundButtons{
-    background-color: tomato;
     margin-top: 30px;
-}
-.managerDashboardProgramsProgramLinkBeneficiary-cardFoundButtons button:first-child{
-    background-color: var(--backgroundColor);
-    border: none;
-    color: var(--textDark);
-    box-shadow: none;
 }
 .managerDashboardProgramsProgramLinkBeneficiary-cardFoundButtons button:last-child{
     float: right;
@@ -46,7 +40,8 @@
     height: 270px;
 }
 .managerDashboardProgramsProgramLinkBeneficiary-cardFoundDefault{
-    background-color: black;
+    background-color: var(--backgroundColor);
+    color: var(--textDark);
     width: 100%;
     height: 270px;
     display: flex;
