--- a/src/Sections/Dashboards/ManagerDashboard/Pages/Programs/Componentes/Card/style.css
+++ b/src/Sections/Dashboards/ManagerDashboard/Pages/Programs/Componentes/Card/style.css
@@ -1,21 +1,20 @@
 .managerDashboardProgramsCard-containerGeral{
-    background-color: darkorange;
+    background-color: var(--white);
     padding: 0px;
     margin-bottom: 20px;
+    border: 1px solid var(--borderColor);
 }
 .managerDashboardProgramsCard-containerGeral-card{
-    background-color: green;
     width: 100%;
     margin: 0px auto;
+    padding: 5px;
 }
 .managerDashboardProgramsCard-containerGeral-cardBody{
-    background-color: aqua;
     display: flex;
     align-content: center;
     align-items: center;
 }
 .managerDashboardProgramsCard-containerGeral-cardBodyImageContainer{
-    background-color: darkmagenta;
     width: 120px;
     height: 120px;
     display: flex;
@@ -23,20 +22,31 @@
     align-items: center;
 }
 .managerDashboardProgramsCard-containerGeral-cardBodyImage{
-    background-color: blueviolet;
-    width: 80px;
-    height: 80px;
-    margin: 0px auto;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    background-position: center;
+    background-size: cover;
 }
 .managerDashboardProgramsCard-containerGeral-cardBodyInformation{
-    background-color: hotpink;
+    color: var(--textDark);
 }
 .managerDashboardProgramsCard-containerGeral-cardFooter{
     width: 100%;
     height: 40px;
-    background-color: gold;
+    background-color: var(--white);
     display: flex;
     align-items: center;
     align-content: center;
     padding-left: 10px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+}
+.managerDashboardProgramsCard-containerGeral-cardFooter a{
+    opacity: 1;
+    padding: 0px;
+    margin:0px;
+}
+.managerDashboardProgramsCard-containerGeral-cardFooter button{
+    margin-right: 10px;
 }
