--- a/src/Components/BellNotification/style.css
+++ b/src/Components/BellNotification/style.css
@@ -1,3 +1,6 @@
+.bellNotification  {
+  margin: 0px auto;
+}
 .bellNotification ul {
     list-style-type: none;
     padding: 0.5rem 1rem;
@@ -23,10 +26,6 @@
     outline: 0;
     text-decoration: none;
     cursor: pointer;
-  }
-  
-  .bellNotification  {
-    
   }
   
   .bellNotification .tooltip-bell {
