--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ body {
     line-height: 1.4285em;
     text-align: left;
     background-color: var(--backgroundColor);
+    overflow-x: hidden;
 }
 a{
     color: var(--primary);
