--- a/src/Components/Layout/Navbar/style.css
+++ b/src/Components/Layout/Navbar/style.css
@@ -21,7 +21,6 @@
     text-align: center;
     color: var(--white);
     cursor: pointer;
-    opacity: 0.7;
     border-bottom: 2px solid transparent;
     -webkit-transition: all 0.5s; /* Safari prior 6.1 */
     transition: all 0.5s;
@@ -35,8 +34,19 @@
     display: flex;
     align-items: center;
 }
+.navbar-main a{
+    opacity: 1;
+}
 .navbar-main:first-child .btn{
+    padding: 2px 5px;
     margin-right: 10px;
+    background-color: var(--white);
+    color: var(--textDark);
+    opacity: 1;
+    box-shadow:  0 0 0 0px var(--secondaryDark) inset, 0 0 0 0px rgba(255, 255, 255, 0.15) inset, 0 5px 0 0 var(--secondaryDark), 0 4px 0 0px rgba(0, 0, 0, 0.4), 0 0px 0px 0px rgba(0, 0, 0, 0.5)
+}
+.navbar-main:first-child .btn:hover{
+    color: var(--primary);
 }
 /* NAVBAR UNAUTHENTICATED */
 
