--- a/src/Sections/Home/Blocks/Footer/Footer.css
+++ b/src/Sections/Home/Blocks/Footer/Footer.css
@@ -1,13 +1,13 @@
-.headerHome{
+.FooterHome{
     width: 100%;
     position: relative;
     margin-top: 150px;
     height: 300px;
-    background: #2072A7;
+    background: var(--primary);
     color: #FFF;
     padding: 20px;
 }
-.headerHome::before {
+.FooterHome::before {
     content: '';
     position: absolute;
     top: 0;
