--- a/src/Sections/Login/Login2.css
+++ b/src/Sections/Login/Login2.css
@@ -14,6 +14,18 @@
     height: 40px;
     display: block;
     margin: 0px auto;
+    animation-name: LoginNavbarLogo;
+    animation-duration: 1s;
+}
+@keyframes LoginNavbarLogo {
+    from{
+        opacity: 0;
+        transform: translateY(-10%);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0%);
+    }
 }
 .Login-Navbar-RightItens{
     padding-top: 10px;
@@ -24,11 +36,32 @@
     background-color: var(--white);
     border: 1px solid var(--borderColor);
     padding: 30px;
-    width: 400px;
-    height: 300px;
     margin: 30px auto 0px;
     border-radius: 8px;
-    box-shadow:  0 0 0 0px var(--secondaryDark) inset, 0 0 0 0px rgba(255, 255, 255, 0.15) inset, 0 5px 0 0 var(--secondaryDark), 0 4px 0 0px rgba(0, 0, 0, 0.4), 0 0px 0px 0px rgba(0, 0, 0, 0.5)
+    box-shadow:  0 0 0 0px var(--secondaryDark) inset, 0 0 0 0px rgba(255, 255, 255, 0.15) inset, 0 5px 0 0 var(--secondaryDark), 0 4px 0 0px rgba(0, 0, 0, 0.4), 0 0px 0px 0px rgba(0, 0, 0, 0.5);
+    -webkit-transition: all 0.5s; /* Safari prior 6.1 */
+    transition: all 0.5s;
+    animation-name: pageLoginFadeCard;
+    animation-duration: 1s;
+}
+@keyframes pageLoginFadeCard {
+    from{
+        opacity: 0;
+        transform: scale(1);
+    }
+    to{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+.Login-Card-VerificationContainer{
+    width: 360px;
+}
+.Login-Card-LoginRealContainer{
+    width: 500px;
+}
+.Login-Card-RegisterPersonContainer{
+    
 }
 .Login-Footer{
     width: 100%;
