--- a/src/Sections/Login/Steps/Verification/Verification.css
+++ b/src/Sections/Login/Steps/Verification/Verification.css
@@ -1,3 +1,8 @@
 .LoginVerification-GeneralContainer{
-    background-color: red;
+    width: 300px;
+    display: block;
+    margin: 0px auto;
+}
+.LoginVerification-GeneralContainer .form-group{
+    margin: 10px 0px;
 }
